# falcon-fdr-dictionary

./: .coverage  .env.example  .gitignore  DEV.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: bandit.yaml  pylint-ondemand.yml
falcon_fdr_dictionary/: __init__.py  api_client.py  cli.py  config.py  tagging.py
falcon_fdr_dictionary.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
falcon_fdr_dictionary/tags/: default_tags.yaml
test/: test_tagdictionary.py
tests/: test_tagdictionary.py  test_tagging.py
