[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falcon-fdr-dictionary"
version = "2.0.0"
description = "CrowdStrike Falcon FDR Event Dictionary - Schema retrieval and tagging tool"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "CrowdStrike" }]
maintainers = [
    { name = "Scott MacGregor", email = "scott.macgregor@crowdstrike.com" },
]
dependencies = [
    "crowdstrike-falconpy>=1.5.4",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]
keywords = ["crowdstrike", "falcon", "reports", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
    "black>=23.0.0",
]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pylint>=3.0.0"]

[project.scripts]
falcon-fdr-events-dictionary = "falcon_fdr_dictionary.cli:main"

[project.urls]
Homepage = "https://github.com/cs-shadowbq/falcon-fdr-dictionary"
Repository = "https://github.com/cs-shadowbq/falcon-fdr-dictionary"
Issues = "https://github.com/cs-shadowbq/falcon-fdr-dictionary/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["falcon_fdr_dictionary*"]
exclude = ["tests*", "docs*", "bin*"]

[tool.setuptools.package-data]
falcon_fdr_dictionary = ["tags/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
